fea:The customer proto file includes a login function
