# backend/customer/openapi.yaml
@@ -30,17 +30,41 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/Status'
+    /api/v1/customer/login:
+        post:
+            tags:
+                - Customer
+            operationId: Customer_Login
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/LoginRequest'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/LoginReply'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
 components:
     schemas:
         GetVerifyCodeReply:
             type: object
             properties:
-                verifyCode:
-                    type: string
                 code:
                     type: integer
                     format: int32
                 message:
+                    type: string
+                verifyCode:
                     type: string
                 expireTime:
                     type: string
@@ -57,6 +81,25 @@ components:
                     description: The type of the serialized message.
             additionalProperties: true
             description: Contains an arbitrary serialized message along with a @type that describes the type of the serialized message.
+        LoginReply:
+            type: object
+            properties:
+                code:
+                    type: integer
+                    format: int32
+                message:
+                    type: string
+                token:
+                    type: string
+                expireTime:
+                    type: string
+        LoginRequest:
+            type: object
+            properties:
+                phoneNumber:
+                    type: string
+                verifyCode:
+                    type: string
         Status:
             type: object
             properties:
